--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -315,6 +315,10 @@
 				<source>Error: the extension mail is required if settings.html!=-1 or settings.categoryOrGroup is set!</source>
 				<target>Erreur: l&#039;extension mail est requise si settings.html!=-1 ou settings.categoryOrGroup est défini!</target>
 			</trans-unit>
+			<trans-unit id="missing_luxletter" resname="missing_luxletter">
+				<source>Error: the extension luxletter is required if you use settings.newsletterExtension=luxletter!</source>
+				<target>Erreur: l&#039;extension luxletter est requise si vous utilisez le paramètre settings.newsletterExtension=luxletter!</target>
+			</trans-unit>
 			<trans-unit id="email.dear-gender-first-and-last-name" resname="email.dear-gender-first-and-last-name">
 				<source>Dear %s %s %s,</source>
 				<target>Cher %s %s %s,</target>
